# arara-python-sdk

./: .gitignore  README.md  pyproject.toml
arara_api_sdk/: __init__.py  client.py  exceptions.py
arara_api_sdk/models/: auth.py  brain.py  campaign.py  message.py  organization.py  payment.py  template.py  user.py
arara_api_sdk/resources/: __init__.py  brain.py  campaign.py  message.py  organization.py  payment.py  template.py  user.py
tests/: conftest.py
tests/unit/: test_config.py  test_exceptions.py  test_http_client.py
tests/unit/resources/: test_message.py  test_template.py
