[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ararahq-sdk"
version = "1.8.0"
description = "Official Python SDK for the Arara API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Arara", email = "contact@arara.io" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
]
lint = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.sdist]
exclude = ["/tests", "/.github", "/.gemini"]

[tool.hatch.build.targets.wheel]
packages = ["arara_api_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "--cov=arara_api_sdk --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["arara_api_sdk"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "B"]
ignore = ["D100", "D104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true

[project.urls]
"Homepage" = "https://github.com/ararahq/arara-python-sdk"
"Bug Tracker" = "https://github.com/ararahq/arara-python-sdk/issues"

# Scripts para publicação (Comentados):
# 
# 1. Instalar dependências de build:
# pip install hatch
#
# 2. Gerar arquivos de distribuição:
# hatch build
#
# 3. Publicar no PyPI:
# hatch publish
#
# 4. Publicar no GitHub Packages:
# (Requer configuração de autenticação no ~/.pypirc ou enviando tokens via ENV)
# hatch publish -r https://pypi.pkg.github.com/ararahq/arara-python-sdk
